make repo a plain localization package, for version 3.9.1

--- a/language/de-DE/de-DE.plg_system_eprivacy.ini
+++ b/language/de-DE/de-DE.plg_system_eprivacy.ini
@@ -36,6 +36,8 @@ COM_PLUGINS_MODULE_FIELDSET_LABEL="Anzeigeoptionen Modul"
 COM_PLUGINS_RIBBON_FIELDSET_LABEL="Anzeigeoptionen Ribbon"
 PLG_SYS_EPRIVACY_COOKIEACL_LABEL="Ansichtsebene"
 PLG_SYS_EPRIVACY_COOKIEACL_DESC="Wählen Sie eine Ansichtsebene für Plugins und Module, die Cookies setzen. Plugins und Module, die diese Ebene verwenden, werden nur Benutzern angezeigt, die Cookies akzeptiert haben. Bei Verwendung des GeoPlugins werden auch Benutzern, die sich nicht in einem betroffenen Land befinden, die dieser Ansichtsebene zugeordneten Plugins und Module angezeigt. FÜGEN SIE DAS EPRIVACY-MODUL ODER -PLUGIN NICHT ZU DIESER GRUPPE HINZU! Es ist sinnvoll das Login-Modul zu dieser Gruppe hinzuzufügen, da dieses ohne Cookies nicht funktioniert."
+PLG_SYS_EPRIVACY_NOCOOKIEACL_LABEL="Zugriffsebene bei Cookie-Ablehnung"
+PLG_SYS_EPRIVACY_NOCOOKIEACL_DESC="Plugins und Module welche die ausgewählte Zugriffsebene verwenden werden nur solchen Benutzern angezeigt, die Cookies nicht akzeptiert haben. Bei Nutzung des GeoPlugins werden die Benutzer aus nicht betroffenen Länder ebenfalls dieser Gruppe zugeordnet. Wenn Sie das Modul mod_eprivacy zu dieser Gruppe hinzufügen, verstoßen Sie gegen Artikel 7.3 der DS-GVO."
 PLG_SYS_EPRIVACY_MISSINGREFLECTION="Auf Ihrem System fehlen die Reflection-Klassen von PHP; daher ist diese Funktion auf Ihrem Server nicht verfügbar."
 PLG_SYS_EPRIVACY_LOGACCEPT_LABEL="Cookie-Zustimmung protokollieren"
 PLG_SYS_EPRIVACY_LOGACCEPT_DESC="Einige EU-Staaten verlangen, dass Webseiten die Zustimmung von Cookies protokollieren. Wenn Sie hier Ja wählen, speichert das Plugin IP-Adresse, Datum/Uhrzeit und den EU-Status (wenn GeoPlugin aktiviert ist) in der Tabelle #__plg_system_eprivacy_log."
@@ -56,13 +58,28 @@ PLG_SYS_EPRIVACY_MODULECSS_DESC="CSS für das Modul. Dieses wird nur verwendet, 
 PLG_SYS_EPRIVACY_COOKIEDOMAINS_LABEL="Cookie Domains"
 PLG_SYS_EPRIVACY_COOKIEDOMAINS_DESC="Einige Drittanbieter-Cookies verwenden Abwandlungen der Domain (z.B. .yourdomain.com). Verwenden Sie dieses Feld, um diese Domains aufzulisten, damit diese Cookies bei Ablehnung entfernt werden können."
 PLG_SYS_EPRIVACY_DOMAIN_LABEL="Domain"
+PLG_SYS_EPRIVACY_TERMS_LABEL="Datenschutzerklärungen"
+PLG_SYS_EPRIVACY_TERMS_DESC="Wählen Sie hier alle Artikel, die Ihre Datenschutzerklärung in einer bestimmten Sprache darstellen und entsprechend verknüpft sind. Der erste Artikel wird als Standardartikel verwendet."
+PLG_SYS_EPRIVACY_TERMS_LANG_LABEL ="Sprache"
+PLG_SYS_EPRIVACY_TERMS_LANG_DESC="Wählen Sie die Sprache für diesen Artikel aus"
+PLG_SYS_EPRIVACY_TERMS_ITEMID_LABEL ="Menü-Link"
+PLG_SYS_EPRIVACY_TERMS_ITEMID_DESC="Wählen Sie den Menü-Link für die Datenschutzerklärung in dieser Sprache aus."
+PLG_SYS_EPRIVACY_LOGINLINKS_LABEL="Login-Links"
+PLG_SYS_EPRIVACY_LOGINLINKS_DESC="Geben Sie hier URIs zu Inhalten an, die einen Login erforderlich machen, um Benutzern, die keine Cookies akzeptiert haben, auch auf diesen Seiten Benachrichtigungen anzuzeigen."
+PLG_SYS_EPRIVACY_LINKS_URI_LABEL="URI"
+PLG_SYS_EPRIVACY_LINKS_URI_DESC="Geben Sie die *EXAKTE* URI aus dem entsprechenden Link an."
+PLG_SYS_EPRIVACY_LINKS_SELECTAREA_LABEL="Bereich auswählen"
+PLG_SYS_EPRIVACY_LINKS_SELECTAREA_DESC="Wählen Sie aus, welcher Teil der URI abgeglichen werden soll."
+PLG_SYS_EPRIVACY_LINKS_SELECTAREA_COMPLETE="gesamte URI"
+PLG_SYS_EPRIVACY_LINKS_SELECTAREA_BEGINS="beginnt gleich"
+PLG_SYS_EPRIVACY_LINKS_SELECTAREA_ENDS="endet gleich"
 ;strings displayed in the front-end
 PLG_SYS_EPRIVACY_MESSAGE_TITLE="EU e-Privacy Directive"
 PLG_SYS_EPRIVACY_MESSAGE="Diese Webseite verwendet Cookies zwecks Authentifikation, Navigation und vieler anderer Funktionen. Durch die Nutzung dieser Webseite stimmen Sie der Erstellung von Cookies auf Ihrem Gerät zu."
 PLG_SYS_EPRIVACY_JSMESSAGE="Durch das Klicken auf OK akzeptieren Sie den Einsatz von Cookies."
-PLG_SYS_EPRIVACY_RIBBONMESSAGE="Diese Webseite verwendet Cookies zwecks Authentifikation, Navigation und vieler anderer Funktionen. Klicken Sie hier, um dem Einsatz von Cookies zuzustimmen oder lehnen Sie durch klicken des X (rechts) ab."
 PLG_SYS_EPRIVACY_POLICYTEXT="Datenschutz-Richtlinie einsehen"
 PLG_SYS_EPRIVACY_LAWLINK_TEXT="e-Privacy Directive Dokumente einsehen"
+PLG_SYS_EPRIVACY_GDPRLINK_TEXT="GDPR-Dokumente anzeigen"
 PLG_SYS_EPRIVACY_AGREE="Ich stimme zu"
 PLG_SYS_EPRIVACY_DECLINE="Ich stimme nicht zu"
 PLG_SYS_EPRIVACY_UNACCEPT_MESSAGE="Sie haben der Nutzung von Cookies auf Ihrem Gerät zugestimmt.  Diese Entscheidung können Sie rückgängig machen."
